# freebsd-web-panel

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  fwp.toml
docs/impl/: 00-framework.md  01-auth.md  02-database.md  03-audit.md  04-system-metrics.md  05-monitoring.md  06-frontend.md  07-web-assets.md  08-filesystem.md  09-zfs.md  10-file-manager.md  11-accounts.md  12-i18n.md  13-sysinfo.md  14-terminal.md  15-rcconf.md  16-crontab.md  17-network.md  18-services.md  README.md
docs/plan/: 00-overview.md  10-jail.md  17-network.md  20-bhyve.md  30-zfs.md  40-system.md  50-frontend.md  60-security-auth.md  70-task-queue.md  80-roadmap.md  90-monitoring.md  README.md
rc.d/: fwp
src/: app.rs  audit.rs  auth.rs  config.rs  db.rs  error.rs  main.rs  monitor.rs  state.rs  sysinfo.rs  terminal.rs  web_assets.rs
src/handlers/: accounts.rs  audit.rs  auth.rs  crontab.rs  files.rs  filesystem.rs  mod.rs  mod_stubs.rs  network.rs  rcconf.rs  services.rs  system.rs  users.rs  zfs.rs
web/: index.html
web/css/: app.css
web/js/: api.js  main.js  router.js
web/js/i18n/: index.js  translations.js
web/js/pages/: accounts.js  audit.js  auth.js  cron.js  dashboard.js  disks.js  dns.js  files.js  filesystem.js  monitor.js  network.js  planned.js  rcconf.js  services.js  terminal.js  users.js  zfs.js
web/js/ui/: confirm.js  formModal.js  layout.js  toast.js
