[package]
name = "fwp"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "FreeBSD Web Panel — system administration panel"
license = "BSD-2-Clause"

[[bin]]
name = "fwp"
path = "src/main.rs"

[features]
default = ["embed-web"]
## Embed the web/ assets into the binary for single-file deployment.
embed-web = ["dep:rust-embed"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
# WebSocket stream split for the terminal feature
futures-util = "0.3"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Database
rusqlite = { version = "0.32", features = ["bundled"] }
# Password hashing
argon2 = "0.5"
rand = "0.8"
# Misc utils
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
regex = "1"
parking_lot = "0.12"
# System calls (sysctl, getloadavg) — replaces subprocess spawning for metrics
sysctl = "0.7"
libc = "0.2"
# CLI
clap = { version = "4", features = ["derive"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Web asset embedding (optional)
rust-embed = { version = "8", optional = true }
# Error handling
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
